web/toggle: fix height on safari

--- a/web/src/ui/util/Toggle.css
+++ b/web/src/ui/util/Toggle.css
@@ -10,8 +10,9 @@ input.toggle {
 	border: 1px solid var(--disabled-color);
 	border-radius: 1.5em;
 	width: 3.5em;
-	/*height: 2em;*/
+	height: 2em;
 	padding: calc(.25em - 1px);
+	box-sizing: border-box;
 	transition: background-color var(--transition-duration), border-color var(--transition-duration);
 
 	&::after {
